2008-07-20 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/ipmi-sensors-config.8.pre.in: Update text.

	* configure.ac: Update lib versions.
	
2008-07-19 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/src/ipmi-sensors-config-sensor-event-enable-common.h,
	ipmi-sensors-config/src/ipmi-sensors-config-sensor-event-enable-common.c:
	New files.

	* ipmi-sensors-config/: Support all event messages enable and
	sensor scanning enable/disable.
	
2008-07-16 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/: Remove discrete sensor hysteresis support.
	Makes no sense.

	* ipmi-sensors-config/src/ipmi-sensors-config-utils.h,
	ipmi-sensors-config/src/ipmi-sensors-config-utils.c
	(create_section_name): New function.

	* ipmi-sensors-config/src/ipmi-sensors-config-utils.h,
	ipmi-sensors-config/src/ipmi-sensors-config-utils.c
	(convert_id_string): Rename to _convert_id_string, make static.

	* ipmi-sensors-config/src/ipmi-sensors-config-threshold-section.c,
	ipmi-sensors-config/src/ipmi-sensors-config-threshold-section.h:
	Use create_section_name appropriately.
	
2008-07-15 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/src/ipmi-sensors-config-threshold-section.c:
	Cleanup to prepare for hysteresis configuration support.

	* ipmi-sensors-config/: Support threshold hysteresis configuration.
	
	* ipmi-sensors-config/src/ipmi-sensors-config-discrete-section.h,
	ipmi-sensors-config/src/ipmi-sensors-config-discrete-section.c:
	New files.

	* ipmi-sensors-config/: Support hysteresis configuration on
	discrete sensors.

	* common/src/config-checkout.c (config_checkout_section): Fix
        corner case.

2008-07-14 Albert Chu <chu11@llnl.gov>
	
	* ipmimonitoring/: Fix up -v output formatting.

	* common/src/configtool/config-tool-argp.c: Fix -v option support.

	* common/man/manpage-common-config-tool-options.man: Fix man options.

	* bmc-config/: Output authentication type enables and serial
	conf, but only under verbose mode.

2008-07-13 Albert Chu <chu11@llnl.gov>
