@@ -1,3 +1,7 @@
+2008-07-30 Albert Chu <chu11@llnl.gov>
+
+	* ipmi-sensors-config/src/: Variety of code cleanup.
+
 2008-07-20 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-sensors-config/ipmi-sensors-config.8.pre.in: Update text.
